Additional color options

--- a/UI/Style_Sheets/light.css
+++ b/UI/Style_Sheets/light.css
@@ -84,20 +84,23 @@ QListWidget:disabled{
     border: 1px solid lightgray;
 }
 QMenu{
-    color:@color4;
-    background-color:@color2;
+    color: @color4;
+    background-color: @color2;
     font-family: "Ubuntu";
 }
 QMenu::item{
-    background-color:transparent;
+    background-color: transparent;
 }
 QMenu::item:selected{
-    color:@color5;
-    background-color:#308CC6;
+    color: @color5;
+    background-color: #308CC6;
+}
+QMenu::item:disabled{
+    color: darkgray;
 }
 QMenu:selected{
-    color:@color5;
-    background-color:#308CC6;
+    color: @color5;
+    background-color: #308CC6;
 }
 QPlainTextEdit{
     border: 1px solid lightgray;
@@ -109,7 +112,7 @@ QPlainTextEdit{
 QPlainTextEdit:disabled{
     border: 1px solid lightgray;
     border-radius: 0px;
-    background-color: #EFEFEF;
+    background-color: @color7;
     color: #C0C0C0;
     font-family: "Ubuntu";
 }
@@ -134,20 +137,20 @@ QPushButton{
 QPushButton[objectName^="pushButton_"]{
     border: 1px solid #ABABAB;
     border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
     color: black;
     font-family: "Ubuntu";
 }
 QPushButton[objectName^="pushButton_"]:disabled{
     border: 1px solid #C4C4C4;
     border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
     color: #C0C0C0;
 }
 QPushButton[objectName^="pushButton_"]:hover{
     border: 1px solid #ABABAB;
     border-radius: 2px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #F8F8F8);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
     color: black;
 }
 /*
@@ -220,7 +223,7 @@ QTableWidget > QTableCornerButton{
     color: @color4;
 }
 QTableWidget:disabled{
-    background-color: #EFEFEF;
+    background-color: @color7;
     color: #C0C0C0;
 }
 #tabWidget > QTabBar::tab {
@@ -269,7 +272,7 @@ QTextEdit{
 QTextEdit:disabled{
     border: 1px solid lightgray;
     border-radius: 0px;
-    background-color: #EFEFEF;
+    background-color: @color7;
     color: #C0C0C0;
     font-family: "Ubuntu";
 }
@@ -281,7 +284,7 @@ QTreeView{
     border: 1px solid lightgray;
 }
 QTreeView > QHeaderView::section{
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #FEFEFE, stop: 1 #EFEFEF);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
     color: @color4;
     font-size: 10pt;
     border: 1px solid #D4D4D4;
