Additional color options

--- a/UI/Style_Sheets/dark.css
+++ b/UI/Style_Sheets/dark.css
@@ -93,16 +93,19 @@ QListWidget:disabled{
     border: 1px solid @color1;
 }
 QMenu{
-    color:@color4;
-    background-color:@color2;
+    color: @color4;
+    background-color: @color2;
     font-family: "Ubuntu";    
 }
 QMenu::item{
-    background-color:transparent;
+    background-color: transparent;
 }
 QMenu::item:selected{
-    color:@color4;
-    background-color:@color3;
+    color: @color4;
+    background-color: @color3;
+}
+QMenu::item:disabled{
+    color: @color1;
 }
 QMenu:selected{
     background-color:@color3;
@@ -136,18 +139,18 @@ QProgressBar:disabled{
 QPushButton[objectName^="pushButton_"]{
     color: #000000;
     border: 1px solid #111111;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
     font-family: "Ubuntu";    
 }
 QPushButton[objectName^="pushButton_"]:disabled{
-    color: #999999;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
+    color: @color9;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
 }
 QPushButton[objectName^="pushButton_"]:hover{
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
 }
 QPushButton[objectName^="pushButton_"]:pressed{
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #666666, stop: 1 #666666);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color7, stop: 1 @color7);
 }
 QRadioButton{
     color: @color4;
@@ -182,8 +185,8 @@ QScrollBar::add-line:vertical {
     height: 16px;
     subcontrol-origin: margin;
 }
-QScrollBar::handle:horizontal{background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);}
-QScrollBar::handle:vertical{background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0,stop: 0 #aaaaaa, stop: 1 #666666);}
+QScrollBar::handle:horizontal{background: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);}
+QScrollBar::handle:vertical{background: qlineargradient(x1: 0, y1: 0, x2: 1, y2: 0,stop: 0 @color6, stop: 1 @color7);}
 QSpinBox{
     background-color: @color5;
     color: @color4;
@@ -527,44 +530,44 @@ QTabWidget#tabWidget2_2::pane{
 QComboBox[objectName^="comboBox_"]{
     padding-left: 4px;
     border: 1px solid #111111;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
 }
 QComboBox[objectName^="comboBox_"]:disabled{
     padding-left: 4px;
-    color: #999999;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
+    color: @color9;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
 }
 QComboBox[objectName^="comboBox_"]:hover{
     padding-left: 4px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
 }
 QComboBox[objectName^="comboBox2_"]{
     padding-left: 4px;
     border: 1px solid #111111;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
     font: 10pt "Ubuntu";
 }
 QComboBox[objectName^="comboBox2_"]:disabled{
     padding-left: 4px;
-    color: #999999;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
+    color: @color9;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
     font: 10pt "Ubuntu";
 }
 QComboBox[objectName^="comboBox2_"]:hover{
     padding-left: 4px;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
 }
 QComboBox[objectName^="comboBox3_"]{
     border: 1px solid #111111;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #aaaaaa, stop: 1 #666666);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
     text-align: right;
 }
 QComboBox[objectName^="comboBox3_"]:disabled{
-    color: #999999;
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #dddddd, stop: 1 #999999);
+    color: @color9;
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
 }
 QComboBox[objectName^="comboBox3_"]:hover{
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 #afafaf, stop: 1 #6f6f6f);
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
 }
 
 QWidget#HardwareSelect{
