Terminals for menu items, Read the Docs test files

--- a/UI/custom_color.ui
+++ b/UI/custom_color.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Custom Color Scheme</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../docs/Icons/logo_f.png</normaloff>../docs/Icons/logo_f.png</iconset>
+  </property>
   <widget class="QFrame" name="frame2_1">
    <property name="geometry">
     <rect>
