--- a/UI/chooser.ui
+++ b/UI/chooser.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Select Option</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../docs/Icons/logo_f.png</normaloff>../docs/Icons/logo_f.png</iconset>
+  </property>
   <widget class="QLabel" name="label1_1">
    <property name="geometry">
     <rect>
