--- a/UI/new_soi.ui
+++ b/UI/new_soi.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>New SOI</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../docs/Icons/logo_f.png</normaloff>../docs/Icons/logo_f.png</iconset>
+  </property>
   <widget class="QFrame" name="frame2_1">
    <property name="geometry">
     <rect>
