--- a/UI/options.ui
+++ b/UI/options.ui
@@ -16,6 +16,10 @@
   <property name="windowTitle">
    <string>Options</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../docs/Icons/logo_f.png</normaloff>../docs/Icons/logo_f.png</iconset>
+  </property>
   <widget class="QListWidget" name="listWidget_options">
    <property name="geometry">
     <rect>
